--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -37,20 +37,109 @@
             </ul>
         </div>
     </nav>
-
     <div class="container mt-4">
         {% for message in get_flashed_messages() %}
             <div class="alert alert-info">{{ message }}</div>
         {% endfor %}
-        {% block content %}
-        {% endblock %}
+        <div class="tm-home-img-container">
+            <img src="{{ url_for('static', filename='img/tm-home-img.jpg') }}" alt="Image" class="hidden-lg-up img-fluid">
+        </div>
+
+        <section class="tm-section">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h2 class="tm-gold-text tm-title">Introduction</h2>
+                        <p class="tm-subtitle">Suspendisse ut magna vel velit cursus tempor ut nec nunc. Mauris vehicula, augue in tincidunt porta, purus ipsum blandit massa.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                        <div class="tm-content-box">
+                            <img src="{{ url_for('static', filename='img/tm-img-310x180-1.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
+                            <h4 class="tm-margin-b-20 tm-gold-text">Lorem ipsum dolor #1</h4>
+                            <p class="tm-margin-b-20">Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+                            <a href="#" class="tm-btn text-uppercase">Detail</a>    
+                        </div>  
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                        <div class="tm-content-box">
+                            <img src="{{ url_for('static', filename='img/tm-img-310x180-2.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
+                            <h4 class="tm-margin-b-20 tm-gold-text">Lorem ipsum dolor #2</h4>
+                            <p class="tm-margin-b-20">Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+                            <a href="#" class="tm-btn text-uppercase">Read More</a>    
+                        </div>  
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                        <div class="tm-content-box">
+                            <img src="{{ url_for('static', filename='img/tm-img-310x180-3.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
+                            <h4 class="tm-margin-b-20 tm-gold-text">Lorem ipsum dolor #3</h4>
+                            <p class="tm-margin-b-20">Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+                            <a href="#" class="tm-btn text-uppercase">Detail</a>    
+                        </div>  
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                        <div class="tm-content-box">
+                            <img src="{{ url_for('static', filename='img/tm-img-310x180-4.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
+                            <h4 class="tm-margin-b-20 tm-gold-text">Lorem ipsum dolor #4</h4>
+                            <p class="tm-margin-b-20">Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+                            <a href="#" class="tm-btn text-uppercase">Read More</a>    
+                        </div>  
+                    </div>
+                </div> 
+
+                <div class="row tm-margin-t-big">
+                    <div class="col-12 col-lg-6">
+                        <div class="tm-2-col-left">
+                            <h3 class="tm-gold-text tm-title">Pellentesque fermentum mauris et posuere</h3>
+                            <p class="tm-margin-b-30">Vivamus accumsan blandit ligula. Sed lobortis efficitur sapien</p>
+                            <img src="{{ url_for('static', filename='img/tm-img-660x330-1.jpg') }}" alt="Image" class="tm-margin-b-40 img-fluid">
+                            <p>Donec tempor lobortis tortor, in feugiat massa facilisis sed. Ut dignissim viverra pretium. In eu justo maximus turpis feugiat finibus scelerisque nec eros. Cras nec lectus tempor nibh vestibulum eleifend et ac elit.</p>
+                            <p>Morbi vel pharetra massa, non iaculis tortor. Nulla porttitor tincidunt felis et feugiat. Vivamus fermentum ligula justo, sit amet blandit nisl volutpat id. Fusce sagittis ultricies felis, non luctus mauris lacinia quis.</p>
+                            <p>Ut fringilla lacus ac tempor ullamcorper. Mauris iaculis placerat ex et mattis. Mauris id vulputate lectus, id fermentum sapien.</p>
+                            <a href="#" class="tm-btn text-uppercase">Read More</a>
+                        </div>
+                    </div>
+                </div> <!-- row -->
+            </div>
+        </section>
     </div>
     
-    <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-            <span class="text-muted">&copy; 2024 Software Engineering Blog</span>
-        </div>
-    </footer>
+    <footer class="tm-footer">
+            <div class="container-fluid">
+                <div class="row">
+                    
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+                        
+                        <div class="tm-footer-content-box">
+                            <h3 class="tm-gold-text tm-title tm-footer-content-box-title">Proin eu posuere felis</h3>
+                            <div class="tm-gray-bg">
+                                <p>Classic is free HTML CSS website template provided by TemplateMo for everyone. Feel free to use it.</p>
+                                <p>Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra.</p>
+                                <p><strong>Danny Egg (Executive)</strong></p>    
+                            </div>    
+                        </div>
+                                                
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+                        <div class="tm-footer-content-box tm-footer-links-container">
+                        
+                            <h3 class="tm-gold-text tm-title tm-footer-content-box-title">Nulla tortor dolor</h3>
+                            <nav>
+                                <ul class="nav">
+                                    <li><a href="#" class="tm-footer-link">Tincidunt non faucibus</a></li>
+                                    <li><a href="#" class="tm-footer-link">Vestibulum tempor</a></li>
+                                    <li><a href="#" class="tm-footer-link">Fusce non turpis euismod</a></li>
+                                    <li><a href="#" class="tm-footer-link">Lorem ipsum dolor sit</a></li>
+                                    <li><a href="#" class="tm-footer-link">Nam in augue consectetur</a></li>
+                                    <li><a href="#" class="tm-footer-link">Text Link Color #CCCC66</a></li>
+                                </ul>
+                            </nav>
+
+                        </div>
+                        
+                    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
