--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -2,52 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} - Blog</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="bootstrap.min.css"> 
 </head>
 <body>
-
-    <div class="tm-header">
-            <div class="container-fluid">
-                <div class="tm-header-inner">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('blog.home') }}">Code Chronicles</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                {% if g.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('blog.index') }}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('blog.create') }}">Create</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-                    </li>
-                    <li class="nav-item">
-                        <span class="navbar-text">Logged in as {{ g.user.username }}</span>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
-                    </li>
-                {% endif %}
-            </ul>
+    <nav class="nav">
+        <h1>Software Engineering</h1>
+        <div>
+            {% if g.user %}
+                <a href="{{ url_for('blog.index') }}">Home</a>
+                <a href="{{ url_for('blog.create') }}">Create</a>
+                <a href="{{ url_for('auth.logout') }}">Logout</a>
+                <p>Logged in as {{ g.user.username }}</p>
+            {% else %}
+                <a href="{{ url_for('auth.register') }}">Register</a>
+                <a href="{{ url_for('auth.login') }}">Login</a>
+            {% endif %}
         </div>
     </nav>
-    <
-                    <div class="row">
-                    <div class="col-xs-12 tm-copyright-col">
-                        <p class="tm-copyright-text">Copyright 2024 CodeChronicles</p>
-                    </div>
-                </div>
-            </div>
+
+    <div class="content">
+        {% for message in get_flashed_messages() %}
+            <div class="flash">{{ message }}</div>
+        {% endfor %}
+        {% block content %}
+        {% endblock %}
+    </div>
+    
+    <footer class="footer">
+        <p>&copy; 2024 Software Engineering Blog</p>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
