--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -43,6 +43,20 @@
                                     <li class="nav-item">
                                         <a href="{{ url_for('auth.login') }}">Login</a>
                                     </li>
+        <div class="tm-home-img-container">
+            <img src="img/tm-home-img.jpg" alt="Image" class="hidden-lg-up img-fluid">
+        </div>
+
+        <section class="tm-section">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-xs-center">
+                        <h2 class="tm-gold-text tm-title">Introduction</h2>
+                        <p class="tm-subtitle">Suspendisse ut magna vel velit cursus tempor ut nec nunc. Mauris vehicula, augue in tincidunt porta, purus ipsum blandit massa.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                                 {% endif %}
                             </ul>
                         </div>
@@ -55,25 +69,7 @@
 
 <div class="content">
         {% for message in get_flashed_messages() %}
-            <div class="tm-home-img-container">
-                <img src="{{ url_for('static', filename='images/tm-home-img.jpg') }}" alt="Image" class="hidden-lg-up img-fluid">
-            </div>
-
-            <section class="tm-section">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-xs-center">
-                            <h2 class="tm-gold-text tm-title">Introduction</h2>
-                            <p class="tm-subtitle">Suspendisse ut magna vel velit cursus tempor ut nec nunc. Mauris vehicula, augue in tincidunt porta, purus ipsum blandit massa.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-                            <!-- Your content here -->
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
         {% endfor %}
         {% block content %}
         {% endblock %}
