--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -73,6 +73,7 @@
 
 <!-- Include a rich text editor script -->
 <script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 <script>
     CKEDITOR.replace('body');
 
