--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -8,49 +8,56 @@ body {
         background-size: cover;
 }
 
-        .nav {
+a, button { transition: all 0.3s ease; }
+a:hover,
+a:focus {
+	text-decoration: none;
+	outline: none;
+}
+
+.nav {
             background-color: #333;
             color: #fff;
             padding: 10px 20px;
-        }
-        .nav h1 {
+}
+.nav h1 {
             margin: 0;
             font-size: 24px;
             font-weight: bold;
-        }
-        .nav .tm-header-inner {
+ }
+ .nav .tm-header-inner {
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
-        .nav .tm-main-nav ul {
+.nav .tm-main-nav ul {
             list-style: none;
             padding: 0;
             margin: 0;
             display: flex;
-        }
-        .nav .tm-main-nav ul li {
+}
+.nav .tm-main-nav ul li {
             margin-right: 20px;
-        }
-        .nav .tm-main-nav ul li a {
+ }
+.nav .tm-main-nav ul li a {
             color: #fff;
             text-decoration: none;
-        }
-        .content {
+}
+.content {
             padding: 20px;
-        }
+ }
 
-         .card {
-        margin-top: 20px;
-    }
-    .card-header h2 {
+.card {
+margin-top: 20px;
+}
+.card-header h2 {
         color: #333;
         font-size: 24px;
         font-weight: bold;
-    }
+}
     .form-group label {
         font-weight: bold;
-    }
-    .btn-primary, .btn-secondary, .btn-warning {
+}
+.btn-primary, .btn-secondary, .btn-warning {
         margin-top: 10px;
-    }
+}
