--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -6,7 +6,7 @@
   <h2>Register</h2>
   <form method="post">
     <label for="username">Username</label>
-    <input name="username" id="username" required>
+    <input type="text" name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     <button type="submit">Register</button>
