--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -9,11 +9,17 @@ body {
     background-size: cover;
 }
 
-h2 {
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 20px;
+
+a, button { transition: all 0.3s ease; }
+a:hover,
+a:focus {
+	text-decoration: none;
+	outline: none;
 }
+
+h2 { font-size: 2.2rem; }
+.tm-thin-font { font-weight: 300; }
+
 .tm-header-inner {
 	display: -webkit-flex;
 	display: -ms-flexbox;
