--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -99,4 +99,24 @@
       </div>
     {% endfor %}
   </div>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Contact Us</h3>
+          <p>Email: fionamuuthoni18@gmail.com</p>
+          <p>Phone: +254725094707</p>
+        </div>
+        <div class="col-md-6">
+          <h3>Follow Us</h3>
+          <ul class="social-icons">
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 {% endblock %}
