--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -197,6 +197,35 @@ select {
 .btn-warning {
         background-color: orange;
 
+.footer {
+  background-color: orange;
+  color: white;
+  padding: 30px 0;
+}
+
+.footer h3 {
+  margin-bottom: 20px;
+}
+
+.footer p {
+  margin-bottom: 10px;
+}
+
+.social-icons {
+  list-style: none;
+  padding: 0;
+}
+
+.social-icons li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.social-icons li a {
+  color: white;
+  font-size: 20px;
+}
+
 .mb-4 {
         margin-bottom: 1.5rem;
     }
