--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -104,7 +104,7 @@
       <div class="row">
         <div class="col-md-6">
           <h3>Contact Us</h3>
-          <p>Email: fionamuuthoni18@gmail.com</p>
+          <p>Email: fionamuthoni18@gmail.com</p>
           <p>Phone: +254725094707</p>
         </div>
         <div class="col-md-6">
