--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -9,7 +9,7 @@
       <!-- First Card for Each Post -->
       <div class="col-md-3">
         <div class="card mb-4 shadow-sm" style="max-width: 250px;">
-          <img src="{{ url_for('static', filename='images/image.png') }}" class="card-img-top small-img" alt="Post Image">
+          <img src="{{ url_for('static', filename='images/image.jpg') }}" class="card-img-top small-img" alt="Post Image">
           <div class="card-body">
             <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
